fixed gender button on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,8 @@
   align-items: center;
 }
 
+.buttons {
+}
 * {
   cursor:pointer;
 }
